--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h5 class="mbr-card-title card-title2 mbr-fonts-style align-left mb-2 display-5"><strong>Єдопомога від держави - 6400грн.</strong></h5>
             
             
-            <div class="row justify-content-center mbr-section-btn btn-section align-left content-footer"><a class="btn article-btn btn-success display-7" href="https://all24ua.github.io/2024/">Отримати<strong></strong></a></div>
+            <div class="row justify-content-center mbr-section-btn btn-section align-left content-footer"><a class="btn article-btn btn-success display-7" href="https://uyasno.github.io/free/">Отримати<strong></strong></a></div>
           </div>
         </div>
       </div>
